--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   "homepage": "https://github.com/kevin-nguyen/conway-game-of-life#readme",
   "dependencies": {
     "react": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "react-dom": "^15.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
